--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "discord.js-heroku",
   "version": "1.0.0",
-  "description": "Discord.js bot on Heroku",
+  "description": ""snekfetch": "^4.0.4",
+",
   "main": "bot.js",
   "dependencies": {
     "node": "8.x",
