--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "discord.js-heroku",
   "version": "1.0.0",
-  "description": ""snekfetch": "^4.0.4",
+  "description": "Discord.js bot on Heroku",
 ",
   "main": "bot.js",
-  "dependencies": {
+  "dependencies": {"snekfetch:" "^4.0.4"
     "node": "8.x",
     "discord.js": "^11.3.2",
     "ffmpeg": "^0.0.4",
