--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Discord.js bot on Heroku",
 ",
   "main": "bot.js",
-  "dependencies": {"snekfetch:" "^4.0.4"
+  "dependencies": {"snekfetch:" "^4.0.4"}
     "node": "8.x",
     "discord.js": "^11.3.2",
     "ffmpeg": "^0.0.4",
